Update to ModLoader 0.1.19