@@ -1,5 +1,5 @@
 @echo off
-java -jar .\source\DoLModLoader.jar
+java -cp .\source\DoLModLoader.jar -Djava.security.manager -Djava.security.policy=permissions.policy com.mynamaneet.dolmodloader.ModLoader
 
 pause
 exit
